nenolod     2005/10/05 04:13:41 UTC	(20051005-2579)
  Log:
  Synchronize atheme patches with upstream XMLRPC code.
  

  Changes:	Modified:
  +1 -0		trunk/include/xmlrpc.h (File Modified) 
  +752 -835	trunk/src/xmlrpc.c (File Modified) 


alambert    2005/10/05 03:44:48 UTC	(20051005-2577)
  Log:
  UserServ: add help for SET subcommands

  Changes:	Modified:
  +13 -0	trunk/modules/userserv/set.c (File Modified) 


alambert    2005/10/05 02:46:11 UTC	(20051005-2575)
  Log:
  First shot at moving UserServ to new help system (SET needs work)

  Changes:	Modified:
  +4 -1		trunk/modules/userserv/drop.c (File Modified) 
  +4 -2		trunk/modules/userserv/freeze.c (File Modified) 
  +2 -53	trunk/modules/userserv/help.c (File Modified) 
  +4 -1		trunk/modules/userserv/hold.c (File Modified) 
  +4 -1		trunk/modules/userserv/info.c (File Modified) 
  +4 -1		trunk/modules/userserv/list.c (File Modified) 
  +4 -1		trunk/modules/userserv/listmail.c (File Modified) 
  +4 -1		trunk/modules/userserv/login.c (File Modified) 
  +4 -1		trunk/modules/userserv/logout.c (File Modified) 
  +4 -1		trunk/modules/userserv/mark.c (File Modified) 
  +4 -1		trunk/modules/userserv/myaccess.c (File Modified) 
  +4 -1		trunk/modules/userserv/register.c (File Modified) 
  +4 -1		trunk/modules/userserv/resetpass.c (File Modified) 
  +4 -1		trunk/modules/userserv/sendpass.c (File Modified) 
  +1 -1		trunk/modules/userserv/set.c (File Modified) 
  +6 -1		trunk/modules/userserv/status.c (File Modified) 
  +4 -1		trunk/modules/userserv/taxonomy.c (File Modified) 
  +4 -1		trunk/modules/userserv/verify.c (File Modified) 


alambert    2005/10/05 00:03:41 UTC	(20051005-2573)
  Log:
  US DROP: use command_delete() in _moddeinit() -- not command_add()\!

  Changes:	Modified:
  +1 -1		trunk/modules/userserv/drop.c (File Modified) 


nenolod     2005/10/04 20:37:47 UTC	(20051004-2571)
  Log:
  Fix bug #55 -- mode retention. Reported by Lauren.
  

  Changes:	Modified:
  +2 -0		trunk/src/node.c (File Modified) 