@@ -1,3 +1,12 @@
+nenolod     2005/10/05 04:18:07 UTC	(20051005-2581)
+  Log:
+  Indent xmlrpc source :P
+  
+
+  Changes:	Modified:
+  +905 -732	trunk/src/xmlrpc.c (File Modified) 
+
+
 nenolod     2005/10/05 04:13:41 UTC	(20051005-2579)
   Log:
   Synchronize atheme patches with upstream XMLRPC code.
